k8s/auth-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: feature-flags
  labels:
    app: auth-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
          image: 653509254250.dkr.ecr.us-east-1.amazonaws.com/pos2/auth-service:latest
          ports:
            - containerPort: 8001
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
          readinessProbe:
            httpGet:
              path: /health
              port: 8001
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8001
            initialDelaySeconds: 20
            periodSeconds: 20

---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: feature-flags
spec:
  type: ClusterIP
  selector:
    app: auth-service
  ports:
    - port: 8001
      targetPort: 8001
      protocol: TCP
