k8s/evaluation-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: evaluation-service
  namespace: feature-flags
  labels:
    app: evaluation-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: evaluation-service
  template:
    metadata:
      labels:
        app: evaluation-service
    spec:
      containers:
        - name: evaluation-service
          image: 653509254250.dkr.ecr.us-east-1.amazonaws.com/pos2/valuation-service:latest
          ports:
            - containerPort: 8004
          resources:
            requests:
              cpu: "150m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"
          readinessProbe:
            httpGet:
              path: /health
              port: 8004
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8004
            initialDelaySeconds: 20
            periodSeconds: 20

---
apiVersion: v1
kind: Service
metadata:
  name: evaluation-service
  namespace: feature-flags
spec:
  type: ClusterIP
  selector:
    app: evaluation-service
  ports:
    - port: 8004
      targetPort: 8004
      protocol: TCP
