k8s/ingress.yaml
# =============================================================================
# INGRESS — roteamento externo via Nginx Ingress Controller
# =============================================================================
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: feature-flags-ingress
  namespace: feature-flags
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          # auth-service  — /auth/...  → auth-service:8001/...
          - path: /auth(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-service
                port:
                  number: 8001

          # flag-service  — /flags/... → flag-service:8002/...
          - path: /flags(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: flag-service
                port:
                  number: 8002

          # targeting-service — /targeting/... → targeting-service:8003/...
          - path: /targeting(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: targeting-service
                port:
                  number: 8003

          # evaluation-service — /evaluation/... → evaluation-service:8004/...
          - path: /evaluation(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: evaluation-service
                port:
                  number: 8004

          # analytics-service — /analytics/... → analytics-service:5000/...
          - path: /analytics(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: analytics-service
                port:
                  number: 5000
